--- a/css/chess911-standalone.css
+++ b/css/chess911-standalone.css
@@ -349,3 +349,14 @@ body {
     border: 1px solid #777;
     margin-bottom: 10px;
 }
+
+#ThinkTimeChoice {
+    background: #121212;
+    color: #ffffff;
+    padding: 1px;
+    font-size: 12px;
+    font-family: "Courier New";
+    border: 1px solid #777;
+    margin-bottom: 10px;
+    max-width: 65px;
+}
