--- a/css/chess911-standalone.css
+++ b/css/chess911-standalone.css
@@ -1,4 +1,21 @@
 /*!
+  _____              _                _____ _                   
+ |  __ \            (_)              / ____| |                  
+ | |__) |__ _ __ ___ _  __ _ _ __   | |    | |__   ___  ___ ___ 
+ |  ___/ _ \ '__/ __| |/ _` | '_ \  | |    | '_ \ / _ \/ __/ __|
+ | |  |  __/ |  \__ \ | (_| | | | | | |____| | | |  __/\__ \__ \
+ |_|   \___|_|  |___/_|\__,_|_| |_|  \_____|_| |_|\___||___/___/
+                                                                
+----------------------------------------------------------------
+ Persian Chess (www.PersianChess.com)
+ Copyright 2014 Anooshiravan Ahmadi - MCE @ Schuberg Philis
+ Released under the GPL license
+ Based on the open source projects mentioned at:
+ http://www.PersianChess.com/About
+ Redistribution of this game design, rules and the engine 
+ requires written permission from the author.
+----------------------------------------------------------------
+
  * chessboard.js v0.3.0
  *
  * Copyright 2013 Chris Oakman
@@ -359,4 +376,26 @@ body {
     border: 1px solid #777;
     margin-bottom: 10px;
     max-width: 65px;
+}
+
+#VariantChoice {
+    background: #121212;
+    color: #ffffff;
+    padding: 1px;
+    font-size: 12px;
+    font-family: "Courier New";
+    border: 1px solid #777;
+    margin-bottom: 10px;
+    max-width: 140px;
+}
+
+#AltFen {
+    background: #121212;
+    color: #ffffff;
+    padding: 1px;
+    font-size: 12px;
+    font-family: "Courier New";
+    border: 1px solid #777;
+    margin-bottom: 10px;
+    max-width: 60px;  
 }
