--- a/css/chess911-standalone.css
+++ b/css/chess911-standalone.css
@@ -86,6 +86,14 @@ body {
     -moz-box-shadow: inset 0 0 10px 5px #3E2C1E;
     box-shadow: inset 0 0 10px 5px #3E2C1E;
 }
+.showsidewhite-53d37 {
+    background-image:url('../img/sidewhite.png');
+    background-size: 100%;
+}
+.showsideblack-53d37 {
+    background-image:url('../img/sideblack.png');
+    background-size: 100%;
+}
 .persian-53d37 {
     background-color: #b58863;
     color: #b58863;
