--- a/css/persianchess.css
+++ b/css/persianchess.css
@@ -285,7 +285,11 @@ body {
 
 .highlight0-32855 {
 }
-.highlight1-32417,
+.highlight1-32417 {
+     -webkit-box-shadow: inset 0 0 3px 3px #B59D4A;
+    -moz-box-shadow: inset 0 0 3px 3px #B59D4A;
+    box-shadow: inset 0 0 3px 3px #B59D4A;
+}
 .highlight2-9c5d2 {
     -webkit-box-shadow: inset 0 0 3px 3px #555;
     -moz-box-shadow: inset 0 0 3px 3px #555;
@@ -413,6 +417,11 @@ body {
     overflow-y: visible;
     font-weight: bold;
     -webkit-overflow-scrolling: touch;
+}
+
+#panel_title {
+    font-family: "Courier New";
+    font-size: 0.7em;
 }
 
 .ui-disabled, .ui-state-disabled
