--- a/css/persianchess.css
+++ b/css/persianchess.css
@@ -286,24 +286,24 @@ body {
 .highlight0-32855 {
 }
 .highlight1-32417 {
-     -webkit-box-shadow: inset 0 0 7px 7px #B59D4A;
-    -moz-box-shadow: inset 0 0 7px 7px #B59D4A;
-    box-shadow: inset 0 0 7px 7px #B59D4A;
+     -webkit-box-shadow: inset 0 0 8px 8px #35404F;
+    -moz-box-shadow: inset 0 0 8px 8px #35404F;
+    box-shadow: inset 0 0 8638CA6px 8px #35404F;
 }
 .highlight2-9c5d2 {
-    -webkit-box-shadow: inset 0 0 3px 3px #555;
-    -moz-box-shadow: inset 0 0 3px 3px #555;
-    box-shadow: inset 0 0 3px 3px #555;
+    -webkit-box-shadow: inset 0 0 5px 5px #638CA6;
+    -moz-box-shadow: inset 0 0 5px 5px #638CA6;
+    box-shadow: inset 0 0 5px 5px #638CA6;
 }
 .highlight3-9c5d2 {
-    -webkit-box-shadow: inset 0 0 4px 4px darkred;
-    -moz-box-shadow: inset 0 0 4px 4px darkred;
-    box-shadow: inset 0 0 4px 4px darkred;
+    -webkit-box-shadow: inset 0 0 5px 5px darkred;
+    -moz-box-shadow: inset 0 0 5px 5px darkred;
+    box-shadow: inset 0 0 5px 5px darkred;
 }
 .highlight4-9c5d2 {
-    -webkit-box-shadow: inset 0 0 3px 3px orange;
-    -moz-box-shadow: inset 0 0 3px 3px orange;
-    box-shadow: inset 0 0 3px 3px orange;
+    -webkit-box-shadow: inset 0 0 5px 5px orange;
+    -moz-box-shadow: inset 0 0 5px 5px orange;
+    box-shadow: inset 0 0 5px 5px orange;
 }
 /* notation */
 
