--- a/css/persianchess.css
+++ b/css/persianchess.css
@@ -286,14 +286,14 @@ body {
 .highlight0-32855 {
 }
 .highlight1-32417 {
-     -webkit-box-shadow: inset 0 0 8px 8px #35404F;
-    -moz-box-shadow: inset 0 0 8px 8px #35404F;
-    box-shadow: inset 0 0 8638CA6px 8px #35404F;
+     -webkit-box-shadow: inset 0 0 5px 5px DarkSlateGray;
+    -moz-box-shadow: inset 0 0 5px 5px DarkSlateGray;
+    box-shadow: inset 0 0 5px 5px DarkSlateGray;
 }
 .highlight2-9c5d2 {
-    -webkit-box-shadow: inset 0 0 5px 5px #638CA6;
-    -moz-box-shadow: inset 0 0 5px 5px #638CA6;
-    box-shadow: inset 0 0 5px 5px #638CA6;
+    -webkit-box-shadow: inset 0 0 5px 5px DarkSlateGray;
+    -moz-box-shadow: inset 0 0 5px 5px DarkSlateGray;
+    box-shadow: inset 0 0 5px 5px DarkSlateGray;
 }
 .highlight3-9c5d2 {
     -webkit-box-shadow: inset 0 0 5px 5px darkred;
@@ -419,11 +419,6 @@ body {
     -webkit-overflow-scrolling: touch;
 }
 
-#panel_title {
-    font-family: "Courier New";
-    font-size: 0.7em;
-}
-
 .ui-disabled, .ui-state-disabled
 {
     opacity: 1 !important;
@@ -465,4 +460,14 @@ body {
 .flipContain .ui-block-b {
     width: 70%;
     text-align: right;
+}
+
+.courier_new_small {
+    font-family: "Courier New" !important;
+    font-size: 0.7em !important;
+}
+
+.courier_new_big {
+    font-family: "Courier New" !important;
+    font-size: 1em !important;
 }
